# clab-game

./: CMakeLists.txt  Clab-game.pc.in  PLANNING.txt  README.txt  link-ps3.sh  main.cpp.bak  ps3.cmake
special/: link-ps3.sh  ps3.cmake
src/: .gitignore  Clab-game.cpp  Clab-game.h  Clab-game.h.in  Manager.cpp  TestMachine.cpp  TestMachine.h  Video.cpp  Video.h  main.cpp
src/Atoms/: Cel.cpp  Cel.h  Manager.cpp  Manager.h  TestMachine.cpp  Video.cpp  Video.h
src/Test/: main.cpp
